[project]
name = "ql-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.30",
    "cartopy>=0.25.0",
    "dask>=2026.1.2",
    "geopandas>=1.1.2",
    "jupyter>=1.1.1",
    "netcdf4>=1.7.4",
    "rasterio>=1.5.0",
    "s3fs>=2026.1.0",
    "xarray>=2026.1.0",
    "zarr>=3.1.5",
]
